# paper-reader-helper

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESKTOP.md  Dockerfile  README.md  docker-compose.yml  findings.md  package-lock.json  progress.md  start.bat  start.txt  task_plan.md
backend/: .dockerignore  Dockerfile  build_exe.py  download_model.py  dump_md.py  inspect_api.py  inspect_markdown.py  inspect_markdown_sqlite.py  paper-reader-backend.spec  peek_db.py  peek_img.py  pyproject.toml  seed_subscriptions.py  test_api.py
backend/app/: main.py
backend/tests/: conftest.py  test_agent_api.py  test_agent_proposal_service.py  test_agent_tool_registry.py  test_ai_provider_settings.py  test_auth.py  test_automation_scheduler.py  test_automation_settings.py  test_block_extraction_service.py  test_block_translation_service.py  test_briefing_standalone.py  test_categories.py  test_chat_ai_provider_settings.py  test_cors.py  test_daily_briefing_api.py  test_daily_ingestion.py  test_db_migrations.py  test_deepseek_client.py  test_delete_paper_fk.py  test_delete_subscription_fk.py  test_desktop_mode.py  test_embedding_service.py  test_health.py  test_import_paper.py  test_mineru_client.py  test_model_constraints.py  test_packaging_config.py  test_paper_blocks_api.py  test_paper_metadata.py  test_paper_queries.py  test_paper_venue_refresh.py  test_parse_pipeline.py  test_recommendations.py  test_section_extractor.py  test_source_adapters.py  test_summarize_pipeline.py  test_task_queue_routes.py  test_upload_paper.py  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+422 files in other folders)
