[project]
name = "paper-reader-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.1",
  "sqlmodel==0.0.24",
  "pydantic-settings==2.8.1",
  "httpx==0.28.1",
  "python-multipart==0.0.20",
  "pyjwt>=2.12.1",
  "passlib[bcrypt]>=1.7.4",
  "sentence-transformers>=5.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "pytest-mock==3.14.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
