[package]
name = "paper-reader"
version = "0.1.0"
description = "Paper Reader — AI-powered paper reading assistant"
authors = ["xiaoda"]
edition = "2021"

[lib]
name = "paper_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"